--- a/defender-for-iot/TOC.yml
+++ b/defender-for-iot/TOC.yml
@@ -6,40 +6,38 @@
   items:
     - name: Overview
       items:
-      - name: OT security
+      - name: What is Microsoft Defender for IoT in the Defender portal?
+        href: microsoft-defender-iot.md    
+      - name: What's new
+        href: whats-new.md  
+      - name: Site security
+        href: site-security-overview.md     
+      - name: Enterprise IoT
         items:
-          - name: What is Microsoft Defender for IoT in the Defender portal?
-            href: microsoft-defender-iot.md    
-          - name: What's new
-            href: whats-new.md  
-          - name: Site security
-            href: site-security-overview.md     
-      - name: Enterprise IoT security
-        items:
-          - name: What is enterprise IoT monitoring in the Defender portal?
+          - name: Enterprise IoT overview
             href: enterprise-iot.md
+          - name: Enterprise IoT licenses
+            href: enterprise-iot-licenses.md
+          - name: Get started with enterprise IoT
+            href: enterprise-iot-get-started.md      
+          - name: Manage enterprise IoT
+            href: enterprise-iot-manage.md 
     - name: Get started
       items:
-      - name: OT security
-        items:
-        - name: Prerequisites
-          href: prerequisites.md            
-        - name: Get started
-          href: get-started.md  
-        - name: Set up RBAC for site security
-          href: set-up-rbac.md   
-        - name: Set up sites
-          href: set-up-sites.md
-        - name: Configure permissions
-          href: configure-permissions.md 
-      - name: Enterprise IoT security
-        items:
-        - name: Get started
-          href: enterprise-iot-get-started.md  
+      - name: Prerequisites
+        href: prerequisites.md            
+      - name: Get started
+        href: get-started.md  
+      - name: Set up RBAC for site security
+        href: set-up-rbac.md   
+      - name: Set up sites
+        href: set-up-sites.md
+      - name: Configure permissions
+        href: configure-permissions.md 
     - name: Monitor site security
       items:
-        - name: Monitor site security
-          href: monitor-site-security.md  
+      - name: Monitor site security
+        href: monitor-site-security.md  
     - name: Discover devices
       items:
       - name: Overview
@@ -58,19 +56,11 @@
         href: investigate-threats.md
     - name: Manage
       items:
-      - name: OT security
+      - name: Manage sites
+        href: manage-sites.md  
+      - name: Manage licenses
         items:
-        - name: Manage sites
-          href: manage-sites.md  
-        - name: Manage licenses
-          items:
-            - name: Overview
-              href: license-overview.md
-            - name: Manage your license
-              href: manage-license.md           
-      - name: Enterprise IoT security
-        items:
-            - name: Enterprise IoT licenses
-              href: enterprise-iot-licenses.md
-            - name: Manage enterprise IoT
-              href: enterprise-iot-manage.md 
+          - name: Overview
+            href: license-overview.md
+          - name: Manage your license
+            href: manage-license.md           
